# Protein_Translator

./: .gitignore  README.md
dna-protein-viz/: CMakeLists.txt
dna-protein-viz/include/: codon_table.h  sequence.h  translator.h
dna-protein-viz/include/controller/: app_controller.h
dna-protein-viz/include/model/: codon_table.h  fasta_parser.h  sequence.h  translator.h
dna-protein-viz/include/view/: visualizer.h
dna-protein-viz/src/: main.cpp
dna-protein-viz/src/controller/: app_controller.cpp
dna-protein-viz/src/model/: codon_table.cpp  fasta_parser.cpp  sequence.cpp  translator.cpp
dna-protein-viz/src/view/: visualizer.cpp
dna-protein-viz/test_data/: high_gc.fasta  invalid_sequence.fasta  low_gc.fasta  multi_sequence.fasta  single_sequence.fasta
